# assets/docs/swagger.yaml
@@ -11,6 +11,18 @@ definitions:
     - passport
     - password
     type: object
+  request.UserMemberSignUpReq:
+    properties:
+      nickname:
+        type: string
+      passport:
+        type: string
+      password:
+        type: string
+    required:
+    - passport
+    - password
+    type: object
   response.UserInfoShowRes:
     properties:
       created_at:
@@ -50,6 +62,28 @@ paths:
       summary: 创建用户
       tags:
       - 用户管理
+  /user-member/sign-up:
+    post:
+      consumes:
+      - application/json
+      description: 填写基本信息
+      parameters:
+      - description: 玩家信息
+        in: body
+        name: req
+        required: true
+        schema:
+          $ref: '#/definitions/request.UserMemberSignUpReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+      summary: 注册
+      tags:
+      - 玩家信息
   /user/show/{id}:
     get:
       consumes:
