# internal/response/user_info.go
@@ -1,9 +1,9 @@
 package response
 
 type UserInfoShowRes struct {
-	Id        string
-	Passport  string
-	Nickname  string
+	Id        string `json:"id"`
+	Passport  string `json:"passport"`
+	Nickname  string `json:"nickname"`
 	CreatedAt string `json:"created_at"`
 	UpdatedAt string `json:"updated_at"`
 }
