# internal/response/user_member.go
@@ -1,14 +1,17 @@
 package response
 
+import "go-start/internal/pkg/helper"
+
 type UserMemberShowRes struct {
-	Id           string
-	Passport     string
-	Email        string
-	Status       string `json:"status"`
-	StatusText   string `json:"status_text"`
-	IfVerify     string `json:"if_verify"`
-	IfVerifyText string `json:"if_verify_text"`
-	Nickname     string `json:"nickname"`
-	CreatedAt    string `json:"created_at"`
-	UpdatedAt    string `json:"updated_at"`
+	Id           string       `json:"id"`
+	Passport     string       `json:"passport"`
+	Password     string       `json:"-"`
+	Email        string       `json:"email"`
+	Status       string       `json:"status"`
+	StatusText   string       `json:"status_text" gorm:"-"`
+	IfVerify     string       `json:"if_verify"`
+	IfVerifyText string       `json:"if_verify_text" gorm:"-"`
+	Nickname     string       `json:"nickname"`
+	CreatedAt    helper.FTime `json:"created_at"`
+	UpdatedAt    helper.FTime `json:"updated_at"`
 }
