# internal/router/routes/user_member.go
@@ -8,10 +8,8 @@ import (
 func InitUserMemberRoutes(r *gin.RouterGroup) (router gin.IRoutes) {
 	userRoutes := r.Group("")
 	{
-		userRoutes.GET("/user-member/:id", controller.User.Show)
-		userRoutes.POST("/user-member/sign-in", controller.User.Create)
-		userRoutes.POST("/user-member/sign-up", controller.UserMember.SignUp)
-		userRoutes.POST("/user-member/sign-logout", controller.User.Create)
+		userRoutes.GET("/user-member/:user_member_id", controller.UserMember.Show)
+		userRoutes.POST("/user-member/sign-logout", controller.UserMember.SignIn)
 	}
 	return userRoutes
 }
